--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "yam",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cowsay": "^1.4.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.11"
   }
 }
